# abm-enso-colombia

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
data/raw/: Resultados_SIMMA.csv
docs/: index.md  instalacion.md  quickstart.md  referencias.md  roadmap.md
docs/modulos/: analysis.md  data.md  model.md  viz.md
docs/teoria/: enso-lorenz.md  fundamentos.md  odd.md
notebooks/: 01_exploracion_datos.ipynb  02_calibracion.ipynb  03_simulacion.ipynb
scripts/: download_all.py
site/: 404.html  index.html
site/instalacion/: index.html
site/modulos/analysis/: index.html
site/modulos/data/: index.html
site/modulos/model/: index.html
site/modulos/viz/: index.html
site/quickstart/: index.html
site/referencias/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/teoria/enso-lorenz/: index.html
site/teoria/fundamentos/: index.html
site/teoria/odd/: index.html
src/abm_enso/: __init__.py  cli.py  pipeline.py
src/abm_enso/analysis/: __init__.py  calibracion_beta.py  calibracion_theta_kappa.py  filtros.py  lorenz.py  metricas.py
src/abm_enso/data/: __init__.py  cuencas.py  era5.py  oni.py  simma.py  sirh.py
src/abm_enso/model/: __init__.py  agente.py  escenarios.py  modelo.py  validacion.py
src/abm_enso/utils/: __init__.py  constants.py  paths.py
src/abm_enso/viz/: __init__.py  app.py  controles.py  estado.py  export.py  heatmap.py  mapa_cuencas.py  periodograma.py  series.py  simulacion.py
tests/: test_analysis.py  test_data_integration.py  test_model.py  test_smoke.py  test_viz.py
